syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;


    
message MLinkLogon {


    MessageMetadata _meta = 1;
    
    string user_name = 100; // SR UserName
    string password = 103; // client supplied secret (optional; required if supplied previously)
    string pin = 106; // SR Mfa Pin
    string api_key = 109; // SR generated API key
    string jwt_token = 112; // Cognito JWT token
}


